# swagger.json
@@ -26,16 +26,16 @@
       "description": "Recipes endpoints"
     },
     {
-      "name": "Popular recipe",
-      "description": "Popular recipe"
+      "name": "Favorite",
+      "description": "Favorite recipes endpoints"
     },
     {
-      "name": "Own recipes",
-      "description": "Own recipes"
+      "name": "Own-recipes",
+      "description": "Own recipes endpoints"
     },
     {
       "name": "Ingredients",
-      "description": "Ingredients"
+      "description": "Ingredients endpoints"
     }
   ],
   "paths": {
@@ -137,6 +137,10 @@
                 }
               }
             }
+          },
+          "500": {
+            "description": "Ingredients not found",
+            "content": {}
           }
         }
       }
@@ -146,18 +150,15 @@
         "tags": ["Ingredients"],
         "summary": "Recipes list by query",
         "security": [{ "Bearer": [] }],
-        "parameters": [],
-        "requestBody": {
-          "description": "Ingredients's object",
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/IngredientsRequest"
-              }
-            }
+        "parameters": [
+          {
+            "in": "path",
+            "name": "q",
+            "required": true,
+            "type": "string",
+            "description": "Ingredient name"
           }
-        },
+        ],
         "responses": {
           "200": {
             "description": "Successful operation",
@@ -168,6 +169,63 @@
                 }
               }
             }
+          },
+          "404": {
+            "description": "Meal by ingredient not found",
+            "content": {}
+          }
+        }
+      }
+    },
+    "/favorite": {
+      "get": {
+        "tags": ["Favorite"],
+        "summary": "Favorite recipes list",
+        "security": [{ "Bearer": [] }],
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "Successful operation",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/FavoriteListResponse"
+                }
+              }
+            }
+          }
+        }
+      },
+      "post": {
+        "tags": ["Favorite"],
+        "summary": "Add favorite recipe",
+        "security": [{ "Bearer": [] }],
+        "parameters": [],
+        "requestBody": {
+          "description": "Recipe's id",
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/AddFavoriteRequest"
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "Successful operation",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/AddFavoriteResponse"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request",
+            "content": {}
           }
         }
       }
@@ -199,6 +257,11 @@
       "RegistrationResponse": {
         "type": "object",
         "properties": {
+          "id": {
+            "type": "string",
+            "description": "User's id",
+            "example": "64088570b21fee18f53f917f"
+          },
           "name": {
             "type": "string",
             "description": "User's name",
@@ -208,11 +271,6 @@
             "type": "string",
             "description": "User's email",
             "format": "email"
-          },
-          "   ": {
-            "type": "number",
-            "description": "User's id",
-            "example": "64088570b21fee18f53f917f"
           }
         }
       },
@@ -275,7 +333,11 @@
                   "type": "string",
                   "description": "Recipe's id",
                   "example": "64088570b21fee18f53f917f"
-                }
+                },
+                "example": [
+                  "6409c39e48026206e1d42374",
+                  "6409c39e48026206e1d42334"
+                ]
               }
             }
           }
@@ -329,17 +391,6 @@
           }
         }
       },
-      "IngredientsRequest": {
-        "required": ["ingredient"],
-        "type": "object",
-        "properties": {
-          "ingredient": {
-            "type": "string",
-            "description": "Ingredient name",
-            "example": "chicken"
-          }
-        }
-      },
       "IngredientsResponse": {
         "type": "object",
         "properties": {
@@ -378,6 +429,70 @@
                 }
               ]
             }
+          }
+        }
+      },
+      "FavoriteListResponse": {
+        "type": "array",
+        "description": "Favorite recipes",
+        "items": {
+          "type": "object",
+          "properties": {
+            "idMeal": {
+              "type": "string",
+              "description": "Recipe's id",
+              "example": "52940"
+            },
+            "strMeal": {
+              "type": "string",
+              "description": "Recipe's name",
+              "example": "Beef and Mustard Pie"
+            },
+            "strInstructions": {
+              "type": "string",
+              "description": "Recipe's instruction",
+              "example": "Preheat the oven to 150C/300F/Gas. Toss the beef and flour together in a bowl with some salt and black pepper."
+            },
+            "strMealThumb": {
+              "type": "string",
+              "description": "Recipe's image",
+              "example": "https://www.themealdb.com/images/media/meals/sypxpx1515365095.jpg"
+            }
+          },
+          "example": [
+            {
+              "idMeal": "52874",
+              "strMeal": "Beef and Mustard Pie",
+              "strInstructions": "Preheat the oven to 150C/300F/Gas 2.\r\nToss the beef and flour together in a bowl with some salt and black pepper.\r\nHeat a large casserole until hot, add half of the rapeseed oil and enough of the beef to just cover the bottom of the casserole.\r\nFry until browned on each side, then remove and set aside. Repeat with the remaining oil and beef.\r\nReturn the beef to the pan, add the wine and cook until the volume of liquid has reduced by half, then add the stock, onion, carrots, thyme and mustard, and season well with salt and pepper.\r\nCover with a lid and place in the oven for two hours.\r\nRemove from the oven, check the seasoning and set aside to cool. Remove the thyme.\r\nWhen the beef is cool and you're ready to assemble the pie, preheat the oven to 200C/400F/Gas 6.\r\nTransfer the beef to a pie dish, brush the rim with the beaten egg yolks and lay the pastry over the top. Brush the top of the pastry with more beaten egg.\r\nTrim the pastry so there is just enough excess to crimp the edges, then place in the oven and bake for 30 minutes, or until the pastry is golden-brown and cooked through.\r\nFor the green beans, bring a saucepan of salted water to the boil, add the beans and cook for 4-5 minutes, or until just tender.\r\nDrain and toss with the butter, then season with black pepper.\r\nTo serve, place a large spoonful of pie onto each plate with some green beans alongside.",
+              "strMealThumb": "https://www.themealdb.com/images/media/meals/sytuqu1511553755.jpg"
+            },
+            {
+              "idMeal": "52878",
+              "strMeal": "Beef and Oyster pie",
+              "strInstructions": "Season the beef cubes with salt and black pepper. Heat a tablespoon of oil in the frying pan and fry the meat over a high heat. Do this in three batches so that you don’t overcrowd the pan, transferring the meat to a large flameproof casserole dish once it is browned all over. Add extra oil if the pan seems dry.\r\nIn the same pan, add another tablespoon of oil and cook the shallots for 4-5 minutes, then add the garlic and fry for 30 seconds. Add the bacon and fry until slightly browned. Transfer the onion and bacon mixture to the casserole dish and add the herbs.\r\nPreheat the oven to 180C/350F/Gas 4.\r\nPour the stout into the frying pan and bring to the boil, stirring to lift any stuck-on browned bits from the bottom of the pan. Pour the stout over the beef in the casserole dish and add the stock. Cover the casserole and place it in the oven for 1½-2 hours, or until the beef is tender and the sauce is reduced.\r\nSkim off any surface fat, taste and add salt and pepper if necessary, then stir in the cornflour paste. Put the casserole dish on the hob – don’t forget that it will be hot – and simmer for 1-2 minutes, stirring, until thickened. Leave to cool.\r\nIncrease the oven to 200C/400F/Gas 6. To make the pastry, put the flour and salt in a very large bowl. Grate the butter and stir it into the flour in three batches. Gradually add 325ml/11fl oz cold water – you may not need it all – and stir with a round-bladed knife until the mixture just comes together. Knead the pastry lightly into a ball on a lightly floured surface and set aside 250g/9oz for the pie lid.\r\nRoll the rest of the pastry out until about 2cm/¾in larger than the dish you’re using. Line the dish with the pastry then pile in the filling, tucking the oysters in as well. Brush the edge of the pastry with beaten egg.\r\nRoll the remaining pastry until slightly larger than your dish and gently lift over the filling, pressing the edges firmly to seal, then trim with a sharp knife. Brush with beaten egg to glaze. Put the dish on a baking tray and bake for 25-30 minutes, or until the pastry is golden-brown and the filling is bubbling.",
+              "strMealThumb": "https://www.themealdb.com/images/media/meals/wrssvt1511556563.jpg"
+            }
+          ]
+        }
+      },
+      "AddFavoriteRequest": {
+        "required": ["idMeal"],
+        "type": "object",
+        "properties": {
+          "idMeal": {
+            "type": "string",
+            "description": "Recipe's id",
+            "example": "52878"
+          }
+        }
+      },
+      "AddFavoriteResponse": {
+        "type": "object",
+        "properties": {
+          "message": {
+            "type": "string",
+            "description": "Response message",
+            "example": "Added to favorite"
           }
         }
       }
